# isocial

./: .gitignore  Dockerfile  README.md  Untitled.ipynb  alembic.ini  api.py  commands.sh  docker-compose.yml  isocial-cert_d5ff363769c84c60a5fd3a07fa9a3cc3.cer  isocial-key-vault-isocial-cert-20240429.pem  nginx.conf  pyproject.toml  requirements.txt  sample.env  summarize.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
app/: db.py  main.py  test.db  users.py  videorequest.py
app/api/chat/: models.py  routers.py  routes.py
app/api/facebook/: models.py  routes.py  services.py
app/api/facebook/utils/: url_converter.py
app/api/instagram/: routes.py
app/api/instagram/utils/: url_converter.py
app/api/notifications/: models.py  routes.py
app/api/openai/: models.py  routes.py  services.py
app/api/payments/: models.py  routes.py
app/api/twitter/: models.py  routes.py  services.py
app/api/users/: models.py  routes.py  schemas.py  services.py
app/api/users/utils/: auth.py  email.py  sample.html
app/api/youtube/: models.py  routes.py  services.py
app/api/youtube/utils/: url_converter.py
app/db/: base.py  db_config.py
app/db/models/: chat.py  credit.py  facebook.py  notification.py  responses.py  subscription.py  twitter.py  users.py  youtube.py
app/db/repositories/: chat_repository.py  facebook_repository.py  notifications_repository.py  payments_repository.py  test.py  twitter_repository.py  youtube_repository.py
migrations/: env.py
migrations/versions/: 5038dbe0364c_.py  641d444f8a43_init.py  a5c7fc33bef1_revised_timestamp_fields.py
